Er... cmake kind of sucks at namespaces?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 project(str_to_enum_trie VERSION 0.1)
 
-add_executable(main
+add_executable(str_to_enum_trie
 	src/main.c)
 
 add_executable(example
@@ -17,7 +17,7 @@ add_custom_command(
 	nocase=1
 	prefix=foo
 	enum=bar
-	./main <"${CMAKE_CURRENT_SOURCE_DIR}/test.example"
+	./str_to_enum_trie <"${CMAKE_CURRENT_SOURCE_DIR}/test.example"
 	MAIN_DEPENDENCY
 	"${CMAKE_CURRENT_SOURCE_DIR}/test.example"
 	DEPENDS
