relying on ./ doesn't allow for subdirectory builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,8 @@ add_custom_command(
 	nocase=1
 	prefix=foo
 	enum=bar
-	./str_to_enum_trie <"${CMAKE_CURRENT_SOURCE_DIR}/test.example"
+	"${CMAKE_CURRENT_BINARY_DIR}/str_to_enum_trie"
+	<"${CMAKE_CURRENT_SOURCE_DIR}/test.example"
 	MAIN_DEPENDENCY
 	"${CMAKE_CURRENT_SOURCE_DIR}/test.example"
 	DEPENDS
