--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cstuff"]
-	path = cstuff
-	url = /home/repo/cstuff
+[submodule "add_module"]
+	path = add_module
+	url = /home/repo/add_module
